--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,9 +7,28 @@
 }
 
 body {
+     margin: 0;
      height: 100vh;
      font-family: Arial, Helvetica, sans-serif;
      font-size: 1.2rem;
      color: antiquewhite;
-     background-color: black;
+     background-color: rgb(30, 9, 63);
+}
+
+h1,
+h2,
+h3,
+h4,
+p {
+     margin: 0;
+}
+
+.container {
+     width: 100%;
+     height: 100%;
+}
+
+.section {
+     width: 100%;
+     height: 100%;
 }
