--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,3 +32,20 @@ p {
      width: 100%;
      height: 100%;
 }
+
+.home {
+     background: url('https://source.unsplash.com/qjCHPZbeXCQ/1600x900')
+          no-repeat center center/cover;
+}
+.gallery {
+     background: url('https://source.unsplash.com/qjCHPZbeXCQ/1600x900')
+          no-repeat center center/cover;
+}
+.offer {
+     background: url('https://source.unsplash.com/qjCHPZbeXCQ/1600x900')
+          no-repeat center center/cover;
+}
+.contact {
+     background: url('https://source.unsplash.com/qjCHPZbeXCQ/1600x900')
+          no-repeat center center/cover;
+}
