--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,24 +28,23 @@ p {
      height: 100%;
 }
 
-.section {
+section {
      width: 100%;
      height: 100%;
 }
 
-.home {
-     background: url('https://source.unsplash.com/qjCHPZbeXCQ/1600x900')
-          no-repeat center center/cover;
+section#home {
+     background: tomato;
 }
-.gallery {
-     background: url('https://source.unsplash.com/qjCHPZbeXCQ/1600x900')
-          no-repeat center center/cover;
+
+section#gallery {
+     background: gray;
 }
-.offer {
-     background: url('https://source.unsplash.com/qjCHPZbeXCQ/1600x900')
-          no-repeat center center/cover;
+
+section#offer {
+     background: plum;
 }
-.contact {
-     background: url('https://source.unsplash.com/qjCHPZbeXCQ/1600x900')
-          no-repeat center center/cover;
+
+section#contact {
+     background: floralwhite;
 }
