--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,10 @@ p {
 section {
      width: 100%;
      height: 100%;
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     align-content: center;
 }
 
 section#home {
