--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,14 @@
+:root {
+     --clr-primary-200: #5200bb;
+     --clr-primary-300: #ff00ff;
+     --clr-primary-900: #1e093f;
+     --clr-neuteral-100: #fff6f2;
+     --clr-neuteral-300: #696969;
+     --clr-neuteral-900: #333;
+}
+
+/*Global settings*/
+
 *,
 *::before,
 *::after {
@@ -12,7 +23,7 @@ body {
      font-family: Arial, Helvetica, sans-serif;
      font-size: 1.2rem;
      color: antiquewhite;
-     background-color: rgb(30, 9, 63);
+     background-color: var(--clr-primary-900);
 }
 
 h1,
@@ -22,6 +33,8 @@ h4,
 p {
      margin: 0;
 }
+
+/*Specifying the size of each section*/
 
 .container {
      width: 100%;
@@ -35,6 +48,14 @@ section {
      flex-direction: column;
      align-items: center;
      align-content: center;
+}
+
+/*Styling Navbar*/
+
+.navbar {
+     position: fixed;
+     z-index: 1;
+     background: ;
 }
 
 section#home {
