--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 :root {
      --clr-primary-200: #5200bb;
      --clr-primary-300: #ff00ff;
+     --clr-primary-500: #1e093f77;
      --clr-primary-900: #1e093f;
      --clr-neuteral-100: #fff6f2;
      --clr-neuteral-300: #696969;
@@ -54,8 +55,34 @@ section {
 
 .navbar {
      position: fixed;
+     top: 0;
      z-index: 1;
-     background: ;
+     background: var(--clr-primary-500);
+     width: 100%;
+     display: flex;
+     height: 3em;
+}
+
+.navbar ul {
+     display: flex;
+     list-style: none;
+     width: 100%;
+     justify-content: center;
+     align-content: center;
+}
+
+.navbar ul li {
+     padding: 1rem;
+     margin: 0 5rem;
+}
+
+.navbar ul li a {
+     font-weight: 2rem;
+     text-transform: uppercase;
+     text-decoration: none;
+     color: var(--clr-neuteral-100);
+
+     letter-spacing: 0.2rem;
 }
 
 section#home {
