--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,6 +85,10 @@ section {
      letter-spacing: 0.2rem;
 }
 
+/*Sections styling*/
+
+/*Section Home*/
+
 section#home {
      background: url('../images/background1.png') no-repeat center center/cover;
 }
