--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,7 @@ body {
      font-size: 1.2rem;
      color: antiquewhite;
      background-color: #41046d;
+     overflow: hidden;
 }
 
 h1,
@@ -37,10 +38,20 @@ p {
 }
 
 /*Specifying the size of each section*/
+/*Setting smooth scrolling*/
 
 .container {
      width: 100%;
      height: 100%;
+
+     /* CSS Smooth Scroll */
+
+     overflow-y: scroll;
+     scroll-behavior: smooth;
+
+     /* Snap Effect */
+
+     scroll-snap-type: y mandatory;
 }
 
 section {
@@ -50,6 +61,7 @@ section {
      flex-direction: column;
      align-items: center;
      align-content: center;
+     scroll-snap-align: center;
 }
 
 /*Styling Navbar*/
