--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,6 +100,47 @@ section {
      letter-spacing: 0.2rem;
 }
 
+/*Styling hamburger*/
+
+.nav-toggle {
+     display: none;
+}
+
+.nav-toggle-label {
+     position: absolute;
+     top: 0;
+     left: 0;
+     margin-left: 1rem;
+     height: 100%;
+     display: flex;
+     align-items: center;
+}
+
+.nav-toggle-label span,
+.nav-toggle-label span::before,
+.nav-toggle-label span::after {
+     display: block;
+     background: var(--clr-neutral-100);
+     height: 3px;
+     width: 2rem;
+     border-radius: 0.5rem;
+     position: relative;
+}
+
+.nav-toggle-label span::before,
+.nav-toggle-label span::after {
+     content: '';
+     position: absolute;
+}
+
+.nav-toggle-label span::before {
+     bottom: 0.7rem;
+}
+
+.nav-toggle-label span::after {
+     top: 0.7rem;
+}
+
 /*Sections styling*/
 
 /*Section Home*/
