--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -181,7 +181,7 @@ section#home {
 }
 
 .home_content-title {
-     font-size: 6vh;
+     font-size: 2rem;
      padding-bottom: 2rem;
      font-style: italic;
      color: var(--clr-neutral-100);
@@ -189,7 +189,7 @@ section#home {
 }
 
 .home_content-paragraph {
-     font-size: 2.5vh;
+     font-size: 2vh;
      color: var(--clr-neutral-300);
      letter-spacing: 0.1rem;
      text-transform: uppercase;
