--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,6 +114,7 @@ section {
      height: 100%;
      display: flex;
      align-items: center;
+     cursor: pointer;
 }
 
 .nav-toggle-label span,
