--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,15 +75,11 @@ section {
      background: var(--clr-primary-500);
      width: 100%;
      display: flex;
-     height: 3em;
+     height: 3rem;
 }
 
 .navbar ul {
-     display: flex;
-     list-style: none;
-     width: 100%;
-     justify-content: center;
-     align-content: center;
+     display: none;
 }
 
 .navbar ul li {
@@ -102,45 +98,22 @@ section {
 
 /*Styling hamburger*/
 
-.nav-toggle {
-     display: none;
-}
-
-.nav-toggle-label {
-     position: absolute;
-     top: 0;
-     left: 0;
-     margin-left: 1rem;
-     height: 100%;
-     display: flex;
-     align-items: center;
+.hamburger {
+     display: block;
      cursor: pointer;
 }
 
-.nav-toggle-label span,
-.nav-toggle-label span::before,
-.nav-toggle-label span::after {
+.bar {
      display: block;
-     background: var(--clr-neutral-100);
-     height: 3px;
-     width: 2rem;
-     border-radius: 0.5rem;
-     position: relative;
+     width: 3rem;
+     height: 0.2em;
+     margin: 0.5rem auto;
+     -webkit-transition: all 0.3s ease-in-out;
+     transition: all 0.3s ease-in-out;
+     background-color: var(--clr-neutral-100);
 }
 
-.nav-toggle-label span::before,
-.nav-toggle-label span::after {
-     content: '';
-     position: absolute;
-}
-
-.nav-toggle-label span::before {
-     bottom: 0.7rem;
-}
-
-.nav-toggle-label span::after {
-     top: 0.7rem;
-}
+/*Hamburger on click*/
 
 /*Sections styling*/
 
@@ -206,4 +179,44 @@ section#offer {
 
 section#contact {
      background: floralwhite;
+}
+
+@media only screen and (min-width: 50rem) {
+     /*Styling Navbar*/
+
+     .navbar {
+          position: fixed;
+          top: 0;
+          z-index: 1;
+          background: var(--clr-primary-500);
+          width: 100%;
+          display: flex;
+          height: 3em;
+     }
+
+     .navbar ul {
+          display: flex;
+          list-style: none;
+          width: 100%;
+          justify-content: center;
+          align-content: center;
+     }
+
+     .navbar ul li {
+          padding: 1rem;
+          margin: 0 2.5rem;
+     }
+
+     .navbar ul li a {
+          font-weight: 2rem;
+          text-transform: uppercase;
+          text-decoration: none;
+          color: var(--clr-neutral-100);
+
+          letter-spacing: 0.2rem;
+     }
+
+     .hamburger {
+          display: none;
+     }
 }
