--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -213,11 +213,11 @@ section#gallery {
 }
 
 section#offer {
-     background: plum;
+     background: url('../images/background3.png') no-repeat center center/cover;
 }
 
 section#contact {
-     background: floralwhite;
+     background: url('../images/background1.png') no-repeat center center/cover;
 }
 
 @media only screen and (min-width: 50rem) {
