set src on img for the second page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,6 +37,11 @@ p {
      margin: 0;
 }
 
+img {
+     width: 100%;
+     display: block;
+}
+
 /*Specifying the size of each section*/
 /*Setting smooth scrolling*/
 
