--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,11 +37,6 @@ p {
      margin: 0;
 }
 
-img {
-     width: 100%;
-     display: block;
-}
-
 /*Specifying the size of each section*/
 /*Setting smooth scrolling*/
 
@@ -228,45 +223,83 @@ section#gallery {
 }
 
 .carousel {
+     position: relative;
+     height: 600px;
+     min-width: 60%;
+     margin: 0 auto;
+     /* display: flex;
+     justify-content: center; */
+}
+
+.carousel__track-container {
+     /* background: chartreuse; */
+
+     height: 100%;
+}
+
+.carousel__track {
+     padding: 0;
+     margin: 0;
+     list-style: none;
+     position: block;
+}
+
+.carousel__slide {
      position: absolute;
-     /* max-width: 80%;
-     top: 50%;
-     transform: translateY(-50%); */
-     display: block;
-}
-
-.carousel__item--hidden {
-     display: none;
-}
-
-.carousel__actions {
+     top: 0;
+     bottom: 0;
+     width: 100%;
+     /* height: 90%; */
+     background-color: #ff00ff0c;
+     border-radius: 1.5rem;
      display: flex;
-     justify-content: space-between;
+     justify-content: center;
+     align-items: center;
 }
+.carousel__images {
+     width: 30%;
+     object-fit: cover;
+}
+
 .carousel__button {
-     border: none;
-     background: red;
-     cursor: pointer;
-     display: flex;
-     justify-content: space-between;
-     /* position: absolute;
-     top: 50%;
-     transform: translateY(-50%); */
-}
-
-.carousel__button--next {
      position: absolute;
-     left: 50%;
-}
-
-#carousel__button--prev:focus {
-     outline: none;
+     top: 50%;
+     transform: translateY(-50%);
+     background: transparent;
+     cursor: pointer;
+     z-index: 999;
      border: none;
 }
 
 .btn-carousel {
-     font-size: 2rem;
+     font-size: 3rem;
+     color: var(--clr-neutral-100);
 }
+
+.carousel__button--prev {
+     left: 10%;
+}
+
+.carousel__button--next {
+     right: 10%;
+}
+
+.carousel__nav {
+     /* background-color: red; */
+     display: flex;
+     justify-content: center;
+     padding: 10px 0;
+}
+
+.carousel__indicator {
+     border: none;
+     background-color: var(--clr-neutral-100);
+     width: 0.6rem;
+     height: 0.6rem;
+     border-radius: 50%;
+     margin-left: 1rem;
+}
+/*Offer Section*/
 
 section#offer {
      background: url('../images/background3.png') no-repeat center center/cover;
