--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -235,13 +235,14 @@ section#gallery {
      /* background: chartreuse; */
 
      height: 100%;
+     position: relative;
 }
 
 .carousel__track {
      padding: 0;
      margin: 0;
      list-style: none;
-     position: block;
+     /* position: relative; */
 }
 
 .carousel__slide {
@@ -257,7 +258,7 @@ section#gallery {
      align-items: center;
 }
 .carousel__images {
-     width: 30%;
+     width: 90%;
      object-fit: cover;
 }
 
@@ -277,11 +278,11 @@ section#gallery {
 }
 
 .carousel__button--prev {
-     left: 10%;
+     left: -20%;
 }
 
 .carousel__button--next {
-     right: 10%;
+     right: -20%;
 }
 
 .carousel__nav {
@@ -289,6 +290,8 @@ section#gallery {
      display: flex;
      justify-content: center;
      padding: 10px 0;
+     /* position: absolute;
+     bottom: 5%; */
 }
 
 .carousel__indicator {
@@ -346,5 +349,98 @@ section#contact {
 
      .hamburger {
           display: none;
+     }
+
+     /*Section gallery*/
+
+     section#gallery {
+          background: url('../images/background2.png') no-repeat center
+               center/cover;
+     }
+
+     .gallery {
+          position: relative;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          width: 100%;
+     }
+
+     .carousel {
+          position: relative;
+          height: 600px;
+          min-width: 60%;
+          margin: 0 auto;
+          /* display: flex;
+     justify-content: center; */
+     }
+
+     .carousel__track-container {
+          /* background: chartreuse; */
+
+          height: 100%;
+     }
+
+     .carousel__track {
+          padding: 0;
+          margin: 0;
+          list-style: none;
+          position: block;
+     }
+
+     .carousel__slide {
+          position: absolute;
+          top: 0;
+          bottom: 0;
+          width: 100%;
+          /* height: 90%; */
+          background-color: #ff00ff0c;
+          border-radius: 1.5rem;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+     }
+     .carousel__images {
+          width: 30%;
+          object-fit: cover;
+     }
+
+     .carousel__button {
+          position: absolute;
+          top: 50%;
+          transform: translateY(-50%);
+          background: transparent;
+          cursor: pointer;
+          z-index: 999;
+          border: none;
+     }
+
+     .btn-carousel {
+          font-size: 3rem;
+          color: var(--clr-neutral-100);
+     }
+
+     .carousel__button--prev {
+          left: 10%;
+     }
+
+     .carousel__button--next {
+          right: 10%;
+     }
+
+     .carousel__nav {
+          /* background-color: red; */
+          display: flex;
+          justify-content: center;
+          padding: 10px 0;
+     }
+
+     .carousel__indicator {
+          border: none;
+          background-color: var(--clr-neutral-100);
+          width: 0.6rem;
+          height: 0.6rem;
+          border-radius: 50%;
+          margin-left: 1rem;
      }
 }
