--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -284,17 +284,17 @@ section#gallery {
 }
 
 .carousel__nav {
-     position: absolute;
-     top: 65%;
+     /* position: absolute;
+     top: 65%; */
 }
 
 .carousel__indicator {
-     border: none;
+     /* border: none;
      background-color: var(--clr-neutral-100);
      width: 0.6rem;
      height: 0.6rem;
      border-radius: 50%;
-     margin-left: 1rem;
+     margin-left: 1rem; */
 }
 
 .rgb::after {
@@ -315,9 +315,25 @@ section#gallery {
           )
           repeat 0% 0% / 300% 100%;
      position: absolute;
-     inset: -3px;
+     inset: -10px;
      border-radius: 16px;
+     filter: blur(8px);
+     transform: translateZ(-1px); /*or z-index */
+     animation: rgb 6s linear infinite;
 }
+
+@keyframes rgb {
+     0% {
+          background-position: 0% 50%;
+     }
+     50% {
+          background-position: 100% 50%;
+     }
+     100% {
+          background-position: 0% 50%;
+     }
+}
+
 /*Offer Section*/
 
 section#offer {
@@ -384,7 +400,7 @@ section#contact {
 
      .carousel {
           position: relative;
-          height: 600px;
+          height: 100%;
           min-width: 60%;
           margin: 0 auto;
           /* display: flex;
@@ -392,32 +408,26 @@ section#contact {
      }
 
      .carousel__track-container {
-          /* background: chartreuse; */
-
-          height: 100%;
+          margin: 0;
+          padding: 0;
      }
 
      .carousel__track {
           padding: 0;
           margin: 0;
           list-style: none;
-          position: block;
+          /* position: block; */
      }
 
      .carousel__slide {
-          position: absolute;
-          top: 0;
-          bottom: 0;
           width: 100%;
-          /* height: 90%; */
-          background-color: #ff00ff0c;
           border-radius: 1.5rem;
           display: flex;
           justify-content: center;
           align-items: center;
      }
      .carousel__images {
-          width: 30%;
+          width: 80%;
           object-fit: cover;
      }
 
@@ -425,7 +435,6 @@ section#contact {
           position: absolute;
           top: 50%;
           transform: translateY(-50%);
-          background: transparent;
           cursor: pointer;
           z-index: 999;
           border: none;
@@ -437,18 +446,19 @@ section#contact {
      }
 
      .carousel__button--prev {
-          left: 10%;
+          left: -10%;
      }
 
      .carousel__button--next {
-          right: 10%;
+          right: -10%;
      }
 
      .carousel__nav {
-          /* background-color: red; */
-          display: flex;
-          justify-content: center;
-          padding: 10px 0;
+          position: absolute;
+          left: 50%;
+          bottom: 0%;
+          transform: translateX(-50%);
+          transform: translateY();
      }
 
      .carousel__indicator {
@@ -457,6 +467,6 @@ section#contact {
           width: 0.6rem;
           height: 0.6rem;
           border-radius: 50%;
-          margin-left: 1rem;
+          /* margin-left: 1rem; */
      }
 }
