--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -400,7 +400,7 @@ section#contact {
 
      .carousel {
           position: relative;
-          height: 100%;
+          max-height: 40rem;
           min-width: 60%;
           margin: 0 auto;
           /* display: flex;
@@ -427,8 +427,9 @@ section#contact {
           align-items: center;
      }
      .carousel__images {
-          width: 80%;
+          max-height: 40rem;
           object-fit: cover;
+          z-index: 333;
      }
 
      .carousel__button {
@@ -456,7 +457,7 @@ section#contact {
      .carousel__nav {
           position: absolute;
           left: 50%;
-          bottom: 0%;
+          bottom: -20%;
           transform: translateX(-50%);
           transform: translateY();
      }
@@ -467,6 +468,6 @@ section#contact {
           width: 0.6rem;
           height: 0.6rem;
           border-radius: 50%;
-          /* margin-left: 1rem; */
+          margin-left: 1rem;
      }
 }
