--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -218,46 +218,45 @@ section#gallery {
 .gallery {
      position: relative;
      display: flex;
+     flex-direction: column;
      justify-content: center;
      width: 100%;
 }
 
 .carousel {
      position: relative;
-     height: 600px;
+     max-height: 40rem;
+     min-height: 35rem;
      min-width: 60%;
      margin: 0 auto;
+     /* display: flex;
+justify-content: center; */
 }
 
 .carousel__track-container {
-     position: block;
-     display: flex;
      margin: 0;
      padding: 0;
-     background-color: yellowgreen;
 }
 
 .carousel__track {
      padding: 0;
      margin: 0;
-
      list-style: none;
+     /* position: block; */
 }
 
 .carousel__slide {
-     position: absolute;
-     top: 50%;
-     transform: translateY(-50%);
-     width: 100%;
+     width: 80%;
      border-radius: 1.5rem;
      display: flex;
      justify-content: center;
      align-items: center;
 }
 .carousel__images {
-     width: 100%;
+     /* max-height: 40rem; */
      object-fit: cover;
-     border-radius: 1.5rem;
+     z-index: 333;
+     width: 100%;
 }
 
 .carousel__button {
@@ -266,35 +265,38 @@ section#gallery {
      transform: translateY(-50%);
      background: transparent;
      cursor: pointer;
-     z-index: 333;
+     z-index: 999;
      border: none;
 }
 
 .btn-carousel {
-     font-size: 2rem;
+     font-size: 3rem;
      color: var(--clr-neutral-100);
 }
 
 .carousel__button--prev {
-     left: -20%;
+     left: 10%;
 }
 
 .carousel__button--next {
-     right: -20%;
+     right: 10%;
 }
 
 .carousel__nav {
-     /* position: absolute;
-     top: 65%; */
+     position: absolute;
+     left: 50%;
+     bottom: -20%;
+     transform: translateX(-50%);
+     transform: translateY();
 }
 
 .carousel__indicator {
-     /* border: none;
+     border: none;
      background-color: var(--clr-neutral-100);
      width: 0.6rem;
      height: 0.6rem;
      border-radius: 50%;
-     margin-left: 1rem; */
+     margin-left: 1rem;
 }
 
 .rgb::after {
@@ -401,6 +403,7 @@ section#contact {
      .carousel {
           position: relative;
           max-height: 40rem;
+          min-height: 35rem;
           min-width: 60%;
           margin: 0 auto;
           /* display: flex;
@@ -430,12 +433,14 @@ section#contact {
           max-height: 40rem;
           object-fit: cover;
           z-index: 333;
+          width: 100%;
      }
 
      .carousel__button {
           position: absolute;
           top: 50%;
           transform: translateY(-50%);
+          background: transparent;
           cursor: pointer;
           z-index: 999;
           border: none;
