--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -225,9 +225,9 @@ section#gallery {
 
 .carousel {
      position: relative;
-     max-height: 40rem;
-     min-height: 35rem;
-     min-width: 60%;
+     /* max-height: 40rem;
+     min-height: 35rem; */
+     max-width: 90%;
      margin: 0 auto;
      /* display: flex;
 justify-content: center; */
@@ -242,30 +242,33 @@ justify-content: center; */
      padding: 0;
      margin: 0;
      list-style: none;
-     /* position: block; */
+     display: flex;
+     justify-content: center;
+     align-items: center;
 }
 
 .carousel__slide {
-     width: 80%;
+     width: 100%;
+     /* margin: auto 2rem; */
      border-radius: 1.5rem;
      display: flex;
      justify-content: center;
      align-items: center;
 }
 .carousel__images {
-     /* max-height: 40rem; */
      object-fit: cover;
+     object-position: 100% 0;
      z-index: 333;
      width: 100%;
+     border-radius: 1.5rem;
 }
 
 .carousel__button {
      position: absolute;
-     top: 50%;
-     transform: translateY(-50%);
+     bottom: -35%;
      background: transparent;
      cursor: pointer;
-     z-index: 999;
+     z-index: 333;
      border: none;
 }
 
@@ -275,19 +278,18 @@ justify-content: center; */
 }
 
 .carousel__button--prev {
-     left: 10%;
+     left: 5%;
 }
 
 .carousel__button--next {
-     right: 10%;
+     right: 5%;
 }
 
 .carousel__nav {
      position: absolute;
      left: 50%;
-     bottom: -20%;
+     bottom: -30%;
      transform: translateX(-50%);
-     transform: translateY();
 }
 
 .carousel__indicator {
@@ -346,7 +348,7 @@ section#contact {
      background: url('../images/background1.png') no-repeat center center/cover;
 }
 
-@media only screen and (min-width: 50rem) {
+@media only screen and (min-width: 70rem) {
      /*Styling Navbar*/
 
      .navbar {
@@ -403,7 +405,7 @@ section#contact {
      .carousel {
           position: relative;
           max-height: 40rem;
-          min-height: 35rem;
+          min-height: 28rem;
           min-width: 60%;
           margin: 0 auto;
           /* display: flex;
