--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,21 @@
      --clr-neutral-100: #b2a8b8;
      --clr-neutral-300: #7d7483;
      --clr-neutral-900: #0c031a;
+     --bg-ln-gr: linear-gradient(
+               45deg,
+               #1f0455 0%,
+               #39089c 10%,
+               #5f15f2 20%,
+               #ba0cf8 30%,
+               #fb07d9 40%,
+               #e707fb 50%,
+               #c615f2 60%,
+               #f215f2 70%,
+               #5f15f2 80%,
+               #5f15f2 90%,
+               #1f0455 100%
+          )
+          repeat 0% 0% / 300% 100%;
 }
 
 /*Global settings*/
@@ -264,9 +279,6 @@ section#gallery {
      display: none;
 }
 
-/* .carousel__images--visible {
-     position: absolute;
-} */
 .carousel__images {
      object-fit: cover;
      object-position: 100% 0;
@@ -302,37 +314,38 @@ section#gallery {
      left: 50%;
      bottom: -30%;
      transform: translateX(-50%);
+     display: flex;
+     justify-content: space-between;
+}
+
+.carousel__nav--item {
+     border-radius: 50%;
+     margin-left: 1rem;
+     padding: 0;
+     width: 1.7rem;
+     height: 1.7rem;
+     display: flex;
+     align-items: center;
+     justify-content: center;
 }
 
 .carousel__indicator {
      border: none;
-     background-color: var(--clr-neutral-100);
-     width: 0.6rem;
-     height: 0.6rem;
+     width: 1rem;
+     height: 1rem;
      border-radius: 50%;
-     margin-left: 1rem;
+}
+
+.carousel__nav--active {
+     background-color: var(--clr-accent-300);
 }
 
 .rgb::after {
      content: '';
-     background: linear-gradient(
-               45deg,
-               #1f0455 0%,
-               #39089c 10%,
-               #5f15f2 20%,
-               #ba0cf8 30%,
-               #fb07d9 40%,
-               #e707fb 50%,
-               #c615f2 60%,
-               #f215f2 70%,
-               #5f15f2 80%,
-               #5f15f2 90%,
-               #1f0455 100%
-          )
-          repeat 0% 0% / 300% 100%;
+     background: var(--bg-ln-gr);
      position: absolute;
-     inset: -10px;
-     border-radius: 16px;
+     inset: -0.9rem;
+     border-radius: 1.5rem;
      filter: blur(8px);
      transform: translateZ(-1px); /*or z-index */
      animation: rgb 6s linear infinite;
@@ -348,6 +361,9 @@ section#gallery {
      100% {
           background-position: 0% 50%;
      }
+}
+
+.carousel__nav--rgb {
 }
 
 /*Offer Section*/
